--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "porjet--trybe-wallet",
-  "homepage":"https://rafaeldevoliveira.github.io/Porjet--trybe-wallet/",
+  "homepage":"./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
